--- a/DataManager/build.gradle
+++ b/DataManager/build.gradle
@@ -28,4 +28,5 @@ dependencies {
 	compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.3.0-rc1'
 	compile('org.springframework.boot:spring-boot-starter-web')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+        compile 'org.json:json:20140107'
 }
